fix(css): increase background contrast ratio for accessibility #1

--- a/public/styles/centroidium.css
+++ b/public/styles/centroidium.css
@@ -85,7 +85,7 @@ h2 {
 	margin: 0 0 0.2em 0;
 	padding: 0.1em;
 	color: rgb(255 255 255);
-	background-color: rgb(0 191 255);
+	background-color: rgb(0 102 204);
 	text-align: center;
 }
 h3 {
@@ -405,7 +405,7 @@ canvas {
 #navigation ul li {
 	flex: 1;
 	margin-right: 1px;
-	background-color: rgb(0 191 255);
+	background-color: rgb(0 102 204);
 	border: solid 1px rgb(255 255 255);
 	border-radius: 9px;
 	text-align: center;
@@ -674,7 +674,7 @@ table.sortable th.sort-desc::after {
 	padding: 0.5em 1em;
 	margin: 0.2em;
 	color: rgb(255 255 255);
-	background-color: rgb(0 191 255);
+	background-color: rgb(0 102 204);
 	border: none;
 	border-radius: 4px;
 	font-weight: bold;
